--- a/index.html
+++ b/index.html
@@ -5,16 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MrNime start page</title>
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+</head>
+<body>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Logo</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!--Top parallax-->
+    <div class="parallax-container">
+        <div class="parallax"><img src="http://via.placeholder.com/3000x1500"></div>
+    </div>
+    <div id="about" class="section white scrollspy">
+        <div class="row container">
+            <h2 class="header">Hello world! My name is MrNime.</h2>
+            <p class="grey-text text-darken-3 lighten-3">
+                I am currently learning how to code.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa omnis, eaque autem natus repudiandae itaque ad eligendi fugit? Tempore maiores illo dolores sit ad officiis minus vero nisi modi, nulla perspiciatis earum quasi, quidem consequuntur unde eos suscipit temporibus alias rerum! Vero voluptas consectetur numquam incidunt eius quo sequi reprehenderit laudantium iste corporis. Voluptates illum voluptatibus dolorum, quidem aspernatur libero, repellat, ea provident odio similique architecto quisquam doloribus. Eos at nihil esse qui sunt corporis. Totam doloribus ad consequuntur libero, placeat. Veniam nisi cum, architecto minus vitae repellendus reiciendis aperiam sed, maiores, repellat quos necessitatibus dignissimos error quae voluptate praesentium sint exercitationem temporibus quia quas aliquid, nostrum eaque. In aut enim, tenetur, quisquam, nobis est magnam, dolorum aliquid magni dolore totam atque odio corporis aliquam. Sed aspernatur debitis explicabo velit, beatae ipsam corrupti officia repudiandae fuga voluptate consequatur laudantium ullam, porro. Ad rerum delectus numquam alias aut perferendis a laboriosam officiis quisquam repudiandae ex, esse mollitia illum tempora cumque iste optio nulla id! Vero, dolor harum repudiandae, rerum ab a obcaecati inventore unde expedita quidem modi, tenetur assumenda vitae in commodi velit, molestiae animi voluptatem voluptatibus recusandae ex ad facere? Necessitatibus velit, veritatis iusto. Praesentium illum cumque fugiat dolorem dolore.
+            </p>
+        </div>
+    </div>
+
+    <!--between parallax-->
+    <div class="parallax-container between-parallax">
+        <div class="parallax"><img src="http://via.placeholder.com/3000x1500"></div>
+    </div>
+
+    <div id="projects" class="section white scrollspy">
+        <div class="row container">
+            <h2 class="header">Projects</h2>
+            <p class="grey-text text-darken-3 lighten-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sed harum, quibusdam, eum id vitae voluptate consequatur voluptas fugit facere, repudiandae unde cum cumque magnam. Vero perspiciatis fugiat, obcaecati dicta saepe delectus provident. Facere amet tenetur nam, sunt velit, repellat quas eius enim odit quidem similique necessitatibus ex nulla rem, ipsa asperiores dicta accusantium ad illum aliquam dignissimos obcaecati quo nesciunt. Quidem alias eius, placeat voluptate, quae eveniet, repudiandae laudantium mollitia natus totam rerum ad. Expedita, consectetur, vel quidem vero mollitia nemo, facilis modi sapiente quo repellendus aliquid incidunt atque? Iste id, in voluptate, sint temporibus a, voluptatum commodi ducimus veritatis perspiciatis aliquam sequi laudantium debitis dolor dolorum quasi asperiores ut molestias. Magni ipsa autem hic omnis cupiditate dolore, officia veniam debitis earum! Vero fugit magni laboriosam explicabo sunt sed saepe delectus, soluta, atque rerum asperiores ad, vitae voluptatibus quisquam aperiam nesciunt culpa. Quod labore corporis, accusamus placeat facilis mollitia obcaecati beatae, sapiente nisi perspiciatis rerum. Ipsam natus iusto exercitationem! Eaque labore fuga aspernatur expedita suscipit incidunt, voluptates exercitationem quisquam vel magnam error corporis cupiditate nisi placeat libero, optio repellat fugiat, laboriosam nulla modi necessitatibus omnis, vitae consequatur voluptas. Doloremque porro dolore ratione fugit quasi sunt, facere laboriosam blanditiis fuga est. Aliquid cumque accusantium quo similique animi velit repellat maiores consequatur quisquam, asperiores ut necessitatibus ipsam quos ratione modi, rem facilis quibusdam eos sed. Aliquam magnam, molestiae reprehenderit laboriosam optio fugit ab, aspernatur ex doloremque similique velit provident, unde tenetur. Voluptatum nam praesentium asperiores ab magnam eum voluptas repellat culpa a numquam veniam consectetur consequatur deserunt sed ipsa nesciunt laborum neque officiis sint, molestias totam ex, dicta aliquam iste? Reprehenderit quasi explicabo eum similique unde ipsum omnis dolorum, nihil debitis, delectus aperiam eligendi cupiditate voluptate adipisci deserunt molestias amet itaque sed tenetur laudantium facilis fugit eius laboriosam dignissimos! Odit ad perferendis aperiam ab quam quod repudiandae veritatis eaque. Eius commodi officiis voluptate facilis illum impedit. Deleniti asperiores quo quidem maiores voluptates aperiam eius quisquam, optio, veniam perspiciatis ipsam consequuntur in, beatae architecto! Totam tempore quae excepturi aspernatur, labore vero numquam ratione sed. Facilis inventore adipisci quae voluptatibus ex, ipsum doloremque, necessitatibus a, temporibus rem deleniti deserunt magnam porro optio alias nemo laudantium. Ab, perspiciatis, quisquam. Magni laborum, a porro blanditiis possimus illo? Vitae velit accusantium vel repellat laboriosam debitis non corporis laborum eligendi dolores, dolorem inventore veniam, iusto ullam et nam soluta? Non voluptatum impedit eligendi, quas labore reprehenderit sapiente magni ducimus provident fugit sequi asperiores consequatur dicta accusantium optio laudantium, vero deleniti tenetur earum quidem excepturi. Eveniet quibusdam sapiente, et itaque recusandae, porro possimus veniam, enim sequi quisquam quas inventore temporibus odit aut a dolorum qui saepe dignissimos? Magnam harum provident odio fuga incidunt? Iusto ex reprehenderit, vitae sed quis dolores nisi non! Expedita architecto, iusto, velit aliquam molestiae commodi sequi adipisci quae et aliquid magnam molestias nulla, incidunt ipsa corporis earum illum magni consectetur ea optio laborum! Assumenda laboriosam quos numquam deleniti veniam nesciunt repudiandae iste, sapiente et ea, mollitia error molestias provident asperiores culpa nam incidunt ex!
+            </p>
+        </div>
+    </div>
+
+    <!--between parallax-->
+    <div class="parallax-container between-parallax">
+        <div class="parallax"><img src="http://via.placeholder.com/3000x1500"></div>
+    </div>
+
+    <div id="contact" class="section white scrollspy">
+        <div class="row container">
+            <h2 class="header">Projects</h2>
+            <p class="grey-text text-darken-3 lighten-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sed harum, quibusdam, eum id vitae voluptate consequatur voluptas fugit facere, repudiandae unde cum cumque magnam. Vero perspiciatis fugiat, obcaecati dicta saepe delectus provident. Facere amet tenetur nam, sunt velit, repellat quas eius enim odit quidem similique necessitatibus ex nulla rem, ipsa asperiores dicta accusantium ad illum aliquam dignissimos obcaecati quo nesciunt. Quidem alias eius, placeat voluptate, quae eveniet, repudiandae laudantium mollitia natus totam rerum ad. Expedita, consectetur, vel quidem vero mollitia nemo, facilis modi sapiente quo repellendus aliquid incidunt atque? Iste id, in voluptate, sint temporibus a, voluptatum commodi ducimus veritatis perspiciatis aliquam sequi laudantium debitis dolor dolorum quasi asperiores ut molestias. Magni ipsa autem hic omnis cupiditate dolore, officia veniam debitis earum! Vero fugit magni laboriosam explicabo sunt sed saepe delectus, soluta, atque rerum asperiores ad, vitae voluptatibus quisquam aperiam nesciunt culpa. Quod labore corporis, accusamus placeat facilis mollitia obcaecati beatae, sapiente nisi perspiciatis rerum. Ipsam natus iusto exercitationem! Eaque labore fuga aspernatur expedita suscipit incidunt, voluptates exercitationem quisquam vel magnam error corporis cupiditate nisi placeat libero, optio repellat fugiat, laboriosam nulla modi necessitatibus omnis, vitae consequatur voluptas. Doloremque porro dolore ratione fugit quasi sunt, facere laboriosam blanditiis fuga est. Aliquid cumque accusantium quo similique animi velit repellat maiores consequatur quisquam, asperiores ut necessitatibus ipsam quos ratione modi, rem facilis quibusdam eos sed. Aliquam magnam, molestiae reprehenderit laboriosam optio fugit ab, aspernatur ex doloremque similique velit provident, unde tenetur. Voluptatum nam praesentium asperiores ab magnam eum voluptas repellat culpa a numquam veniam consectetur consequatur deserunt sed ipsa nesciunt laborum neque officiis sint, molestias totam ex, dicta aliquam iste? Reprehenderit quasi explicabo eum similique unde ipsum omnis dolorum, nihil debitis, delectus aperiam eligendi cupiditate voluptate adipisci deserunt molestias amet itaque sed tenetur laudantium facilis fugit eius laboriosam dignissimos! Odit ad perferendis aperiam ab quam quod repudiandae veritatis eaque. Eius commodi officiis voluptate facilis illum impedit. Deleniti asperiores quo quidem maiores voluptates aperiam eius quisquam, optio, veniam perspiciatis ipsam consequuntur in, beatae architecto! Totam tempore quae excepturi aspernatur, labore vero numquam ratione sed. Facilis inventore adipisci quae voluptatibus ex, ipsum doloremque, necessitatibus a, temporibus rem deleniti deserunt magnam porro optio alias nemo laudantium. Ab, perspiciatis, quisquam. Magni laborum, a porro blanditiis possimus illo? Vitae velit accusantium vel repellat laboriosam debitis non corporis laborum eligendi dolores, dolorem inventore veniam, iusto ullam et nam soluta? Non voluptatum impedit eligendi, quas labore reprehenderit sapiente magni ducimus provident fugit sequi asperiores consequatur dicta accusantium optio laudantium, vero deleniti tenetur earum quidem excepturi. Eveniet quibusdam sapiente, et itaque recusandae, porro possimus veniam, enim sequi quisquam quas inventore temporibus odit aut a dolorum qui saepe dignissimos? Magnam harum provident odio fuga incidunt? Iusto ex reprehenderit, vitae sed quis dolores nisi non! Expedita architecto, iusto, velit aliquam molestiae commodi sequi adipisci quae et aliquid magnam molestias nulla, incidunt ipsa corporis earum illum magni consectetur ea optio laborum! Assumenda laboriosam quos numquam deleniti veniam nesciunt repudiandae iste, sapiente et ea, mollitia error molestias provident asperiores culpa nam incidunt ex!
+            </p>
+        </div>
+    </div>
+
+    <!--end parallax-->
+    <div class="parallax-container">
+        <div class="parallax"><img src="http://via.placeholder.com/3000x1500"></div>
+    </div>
+
+    <footer class="page-footer">
+        <div class="footer-copyright">
+            <div class="container">
+                Coded by <a href="https://www.freecodecamp.com/MrNime" target="_blank">Nicky Meuleman</a>
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
-</head>
-<body>
-    <h1>Hello world! My name is MrNime.</h1>
 </body>
 </html>
