--- a/index.html
+++ b/index.html
@@ -90,9 +90,36 @@
 <div id="contact" class="section white scrollspy">
     <div class="row container">
         <h2 class="header">Contact</h2>
-        <p class="grey-text text-darken-3 lighten-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sed harum, quibusdam, eum id vitae voluptate consequatur voluptas fugit facere, repudiandae unde cum cumque magnam. Vero perspiciatis fugiat, obcaecati dicta saepe delectus provident. Facere amet tenetur nam, sunt velit, repellat quas eius enim odit quidem similique necessitatibus ex nulla rem, ipsa asperiores dicta accusantium ad illum aliquam dignissimos obcaecati quo nesciunt. Quidem alias eius, placeat voluptate, quae eveniet, repudiandae laudantium mollitia natus totam rerum ad. Expedita, consectetur, vel quidem vero mollitia nemo, facilis modi sapiente quo repellendus aliquid incidunt atque? Iste id, in voluptate, sint temporibus a, voluptatum commodi ducimus veritatis perspiciatis aliquam sequi laudantium debitis dolor dolorum quasi asperiores ut molestias. Magni ipsa autem hic omnis cupiditate dolore, officia veniam debitis earum! Vero fugit magni laboriosam explicabo sunt sed saepe delectus, soluta, atque rerum asperiores ad, vitae voluptatibus quisquam aperiam nesciunt culpa. Quod labore corporis, accusamus placeat facilis mollitia obcaecati beatae, sapiente nisi perspiciatis rerum. Ipsam natus iusto exercitationem! Eaque labore fuga aspernatur expedita suscipit incidunt, voluptates exercitationem quisquam vel magnam error corporis cupiditate nisi placeat libero, optio repellat fugiat, laboriosam nulla modi necessitatibus omnis, vitae consequatur voluptas. Doloremque porro dolore ratione fugit quasi sunt, facere laboriosam blanditiis fuga est. Aliquid cumque accusantium quo similique animi velit repellat maiores consequatur quisquam, asperiores ut necessitatibus ipsam quos ratione modi, rem facilis quibusdam eos sed. Aliquam magnam, molestiae reprehenderit laboriosam optio fugit ab, aspernatur ex doloremque similique velit provident, unde tenetur. Voluptatum nam praesentium asperiores ab magnam eum voluptas repellat culpa a numquam veniam consectetur consequatur deserunt sed ipsa nesciunt laborum neque officiis sint, molestias totam ex, dicta aliquam iste? Reprehenderit quasi explicabo eum similique unde ipsum omnis dolorum, nihil debitis, delectus aperiam eligendi cupiditate voluptate adipisci deserunt molestias amet itaque sed tenetur laudantium facilis fugit eius laboriosam dignissimos! Odit ad perferendis aperiam ab quam quod repudiandae veritatis eaque. Eius commodi officiis voluptate facilis illum impedit. Deleniti asperiores quo quidem maiores voluptates aperiam eius quisquam, optio, veniam perspiciatis ipsam consequuntur in, beatae architecto! Totam tempore quae excepturi aspernatur, labore vero numquam ratione sed. Facilis inventore adipisci quae voluptatibus ex, ipsum doloremque, necessitatibus a, temporibus rem deleniti deserunt magnam porro optio alias nemo laudantium. Ab, perspiciatis, quisquam. Magni laborum, a porro blanditiis possimus illo? Vitae velit accusantium vel repellat laboriosam debitis non corporis laborum eligendi dolores, dolorem inventore veniam, iusto ullam et nam soluta? Non voluptatum impedit eligendi, quas labore reprehenderit sapiente magni ducimus provident fugit sequi asperiores consequatur dicta accusantium optio laudantium, vero deleniti tenetur earum quidem excepturi. Eveniet quibusdam sapiente, et itaque recusandae, porro possimus veniam, enim sequi quisquam quas inventore temporibus odit aut a dolorum qui saepe dignissimos? Magnam harum provident odio fuga incidunt? Iusto ex reprehenderit, vitae sed quis dolores nisi non! Expedita architecto, iusto, velit aliquam molestiae commodi sequi adipisci quae et aliquid magnam molestias nulla, incidunt ipsa corporis earum illum magni consectetur ea optio laborum! Assumenda laboriosam quos numquam deleniti veniam nesciunt repudiandae iste, sapiente et ea, mollitia error molestias provident asperiores culpa nam incidunt ex!
-        </p>
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <i class="material-icons prefix">account_circle</i>
+                <input placeholder="Jon Snow" id="first_name" type="text" class="validate">
+                <label for="first_name">Name</label>
+              </div>
+              <div class="input-field col s6">
+                <i class="material-icons prefix">email</i>
+                <input placeholder="jon@snow.com" id="e-mail" type="email" class="validate">
+                <label for="e-mail">E-mail</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">edit</i>
+                <textarea placeholder="I know nothing." id="message" class="materialize-textarea"></textarea>
+                <label for="message">Message</label>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+          </form>
+        </div>
     </div>
 </div>
 
