add second fab to cards

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <div class="card-image">
                     <img src="/img/projects/flyinglap.png">
                     <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://flyinglap.herokuapp.com" target="_blank"><i class="material-icons">add</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red fab-links" href="https://github.com/MrNime/Flying-Lap" target="_blank"><i class="material-icons">code</i></a>
                 </div>
                 <div class="card-content">
                     <span class="card-title">Flying Lap</span>
@@ -69,7 +70,8 @@
             <div class="card">
                 <div class="card-image">
                     <img src="/img/projects/randomquotes.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://mrnime.github.io/RandomQuotes/" target="_blank"><i class="material-icons">add</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://mrnime.github.io/RandomQuotes" target="_blank"><i class="material-icons">exit_to_app</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red fab-links" href="https://github.com/MrNime/RandomQuotes" target="_blank"><i class="material-icons">code</i></a>
                 </div>
                 <div class="card-content">
                     <span class="card-title">Random Quote Generator</span>
