--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <!-- NAVBAR -->
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Nicky Meuleman</a>
+                <a href="#!" class="brand-logo">Nicky</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class=""><a href="#about">About</a></li>
+                    <li class=""><a href="#projects">Projects</a></li>
+                    <li class=""><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </div>
+    <ul class="side-nav" id="mobile-demo">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+    <!-- END NAVBAR -->
 
     <!--Top parallax-->
     <div class="parallax-container">
@@ -79,6 +86,20 @@
                     <p>Show random quote from an API.</p>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-image">
+                    <img src="/img/projects/localweather.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://mrnime.github.io/LocalWeather" target="_blank"><i class="material-icons">exit_to_app</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red fab-links" href="https://github.com/MrNime/LocalWeather" target="_blank"><i class="material-icons">code</i></a>
+                </div>
+                <div class="card-content">
+                    <span class="card-title">Local Weather</span>
+                    <p>FreeCodeCamp project.</p>
+                    <p>Show the weather at the location of your IP-address.</p>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
@@ -93,34 +114,34 @@
     <div class="row container">
         <h2 class="header">Contact</h2>
         <div class="row">
-          <form class="col s12">
-            <div class="row">
-              <div class="input-field col s6">
-                <i class="material-icons prefix">account_circle</i>
-                <input placeholder="Jon Snow" id="first_name" type="text" class="validate">
-                <label for="first_name">Name</label>
-              </div>
-              <div class="input-field col s6">
-                <i class="material-icons prefix">email</i>
-                <input placeholder="jon@snow.com" id="e-mail" type="email" class="validate">
-                <label for="e-mail">E-mail</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">edit</i>
-                <textarea placeholder="I know nothing." id="message" class="materialize-textarea"></textarea>
-                <label for="message">Message</label>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                        <i class="material-icons right">send</i>
-                    </button>
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input placeholder="Jon Snow" id="first_name" type="text" class="validate">
+                        <label for="first_name">Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <i class="material-icons prefix">email</i>
+                        <input placeholder="jon@snow.com" id="e-mail" type="email" class="validate">
+                        <label for="e-mail">E-mail</label>
+                    </div>
                 </div>
-            </div>
-          </form>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">edit</i>
+                        <textarea placeholder="I know nothing." id="message" class="materialize-textarea"></textarea>
+                        <label for="message">Message</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
