change some colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- NAVBAR -->
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper blue darken-2">
                 <a href="#!" class="brand-logo">Nicky</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
@@ -40,7 +40,7 @@
         <div class="parallax"><img src="/img/top.jpeg"></div>
     </div>
 
-    <div id="about" class="section white scrollspy">
+    <div id="about" class="section grey lighten-3 scrollspy">
         <div class="row container">
             <h2 class="header">Hello world! My name is Nicky.</h2>
             <p class="grey-text text-darken-3 lighten-3">
@@ -57,7 +57,7 @@
         <div class="parallax"><img src="/img/projects.jpg"></div>
     </div>
 
-    <div id="projects" class="section white scrollspy">
+    <div id="projects" class="section grey lighten-3 scrollspy">
         <div class="row container">
             <h2 class="header">Projects</h2>
 
@@ -65,7 +65,7 @@
             <div class="card">
                 <div class="card-image">
                     <img src="/img/projects/flyinglap.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://flyinglap.herokuapp.com" target="_blank"><i class="material-icons">add</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://flyinglap.herokuapp.com" target="_blank"><i class="material-icons">exit_to_app</i></a>
                     <a class="btn-floating halfway-fab waves-effect waves-light red fab-links" href="https://github.com/MrNime/Flying-Lap" target="_blank"><i class="material-icons">code</i></a>
                 </div>
                 <div class="card-content">
@@ -110,27 +110,27 @@
     <div class="parallax"><img src="/img/contact.jpeg"></div>
 </div>
 
-<div id="contact" class="section white scrollspy">
+<div id="contact" class="section grey lighten-3 scrollspy">
     <div class="row container">
         <h2 class="header">Contact</h2>
         <div class="row">
-            <form class="col s12">
+            <form class="col s12" action="mailto:nicky.meuleman+portfolio@gmail.com" method="post" enctype="text/plain">
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
-                        <input placeholder="Jon Snow" id="first_name" type="text" class="validate">
+                        <input placeholder="John Doe" id="first_name" type="text" class="validate">
                         <label for="first_name">Name</label>
                     </div>
                     <div class="input-field col s6">
                         <i class="material-icons prefix">email</i>
-                        <input placeholder="jon@snow.com" id="e-mail" type="email" class="validate">
+                        <input placeholder="john@doe.com" id="e-mail" type="email" class="validate">
                         <label for="e-mail">E-mail</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">edit</i>
-                        <textarea placeholder="I know nothing." id="message" class="materialize-textarea"></textarea>
+                        <textarea placeholder="Your message here." id="message" class="materialize-textarea"></textarea>
                         <label for="message">Message</label>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
     <div class="parallax"><img src="/img/bottom.jpeg"></div>
 </div>
 
-<footer class="page-footer">
+<footer class="page-footer blue darken-2">
     <div class="footer-copyright">
         <div class="container">
             Coded by <a href="https://www.freecodecamp.com/MrNime" target="_blank">Nicky Meuleman</a>
