--- a/index.html
+++ b/index.html
@@ -114,34 +114,40 @@
     <div class="row container">
         <h2 class="header">Contact</h2>
         <div class="row">
-            <form class="col s12" action="mailto:nicky.meuleman+portfolio@gmail.com" method="post" enctype="text/plain">
+            <form id="gform" method="POST" class="col s12" action="https://script.google.com/macros/s/AKfycbx9Kw1vDX0AfiqL_2GzasKKTYfCqvIHNc4TVpjE7vuU1btroNYv/exec">
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
-                        <input placeholder="John Doe" id="first_name" type="text" class="validate">
-                        <label for="first_name">Name</label>
+                        <input id="name" name="name" type="text" class="validate">
+                        <label for="name">Name</label>
                     </div>
                     <div class="input-field col s6">
                         <i class="material-icons prefix">email</i>
-                        <input placeholder="john@doe.com" id="e-mail" type="email" class="validate">
-                        <label for="e-mail">E-mail</label>
+                        <input id="email" name="email" type="email" class="validate">
+                        <label for="email">E-mail</label>
+                        <span id="email-invalid" style="display:none">
+                          Must be a valid email address</span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">edit</i>
-                        <textarea placeholder="Your message here." id="message" class="materialize-textarea"></textarea>
+                        <textarea id="message" name="message" class="materialize-textarea"></textarea>
                         <label for="message">Message</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <button class="btn waves-effect waves-light">Submit
                             <i class="material-icons right">send</i>
                         </button>
                     </div>
                 </div>
             </form>
+            <div style="display:none;" id="thankyou_message">
+                <h2><em>Thanks</em> for contacting us!
+                    We will get back to you soon!</h2>
+            </div>
         </div>
     </div>
 </div>
@@ -159,11 +165,10 @@
         </div>
     </div>
 </footer>
-<script
-src="https://code.jquery.com/jquery-3.2.1.min.js"
-integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
 <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
