--- a/index.html
+++ b/index.html
@@ -138,16 +138,30 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="btn waves-effect waves-light">Submit
+                        <button class="btn waves-effect waves-light blue darken-2">Submit
                             <i class="material-icons right">send</i>
                         </button>
                     </div>
                 </div>
             </form>
-            <div style="display:none;" id="thankyou_message">
-                <h2><em>Thanks</em> for contacting us!
-                    We will get back to you soon!</h2>
+
+            <div class="row" id="thankyou_message" style="display:none;">
+                <div class="col s12 m12">
+                    <div class="card green darken-1">
+                        <div class="row">
+                            <div class="col s12 m10">
+                                <div class="card-content white-text">
+                                    <p>Your message was sent!</p>
+                                </div>
+                            </div>
+                            <div class="col s12 m2">
+                                <i class="material-icons right close-confirm-icon" id="alert_close" aria-hidden="true">close</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
@@ -161,7 +175,7 @@
     <div class="footer-copyright">
         <div class="container">
             Coded by <a href="https://www.freecodecamp.com/MrNime" target="_blank">Nicky Meuleman</a>
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="#!">Social icons</a>
         </div>
     </div>
 </footer>
