--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
     <div id="projects" class="section grey lighten-3 scrollspy">
         <div class="row container">
             <h2 class="header">Projects</h2>
-
-
             <div class="card">
                 <div class="card-image">
                     <img src="/img/projects/flyinglap.png">
@@ -74,20 +72,41 @@
                     <p>Site where you can view F1 qualifying/race results.</p>
                 </div>
             </div>
+        </div>
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="/img/projects/randomquotes.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped" href="https://mrnime.github.io/RandomQuotes" target="_blank" data-position="top" data-tooltip="View demo"><i class="material-icons">exit_to_app</i></a>
-                    <a class="btn-floating halfway-fab waves-effect waves-light red fab-links tooltipped" href="https://github.com/MrNime/RandomQuotes" target="_blank" data-position="top" data-tooltip="View code"><i class="material-icons">code</i></a>
-                </div>
-                <div class="card-content">
-                    <span class="card-title">Random Quote Generator</span>
-                    <p>FreeCodeCamp project.</p>
-                    <p>Show random quote from an API.</p>
+        <div class="row container">
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="/img/projects/randomquotes.png">
+                        <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped" href="https://mrnime.github.io/RandomQuotes" target="_blank" data-position="top" data-tooltip="View demo"><i class="material-icons">exit_to_app</i></a>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red fab-links tooltipped" href="https://github.com/MrNime/RandomQuotes" target="_blank" data-position="top" data-tooltip="View code"><i class="material-icons">code</i></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">Random Quote Generator</span>
+                        <p>FreeCodeCamp project.</p>
+                        <p>Show random quote from an API.</p>
+                    </div>
                 </div>
             </div>
 
+            <div class="col m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="/img/projects/wikipediaviewer.png">
+                        <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped" href="https://mrnime.github.io/WikipediaViewer" target="_blank" data-position="top" data-tooltip="View demo"><i class="material-icons">exit_to_app</i></a>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red fab-links tooltipped" href="https://github.com/MrNime/WikipediaViewer" target="_blank" data-position="top" data-tooltip="View code"><i class="material-icons">code</i></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">Wikipedia Viewer</span>
+                        <p>FreeCodeCamp project.</p>
+                        <p>Search articles on Wikipedia.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+        <div class="row container">
             <div class="card">
                 <div class="card-image">
                     <img src="/img/projects/localweather.png">
@@ -100,7 +119,6 @@
                     <p>Show the weather at the location of your IP-address.</p>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
